--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; margin: 0;
+}
+
+section{
+    margin: 100px 0;
+}
+
+h1{
+    font-size: 50px;
+}
+
+h2{
+    font-size: 40px; 
+    margin-top: 0;
 }
 .header-text{
-     font-size: 60px; font-family: 'Domine', serif;
+     font-size: 60px; 
+     font-family: 'Domine', serif; 
+     margin: 20px 0;
+     }
+
+.border{ border-left: 5px solid;
+    border-image: linear-gradient(#ffbb00, #ff8800);
+    border-image-slice: 1; 
+    padding-left: 15px;
 }
 
 .orange-color{
@@ -10,47 +31,108 @@ body{
 }
 
 .paragraph{
-    margin-bottom: 5%; font-size: 22px;
+    margin: 40px 0; 
+    font-size: 22px;
 }
 
 .orange-button{
-    color: #ffa600; text-decoration: none;background-color: #f1a500; color: white; padding: 10px 20px; border-radius: 5px; font-weight: 600;
+    color: #ffa600; 
+    text-decoration: none; 
+    background-color: #ffae00; 
+    color: white; 
+    padding: 10px 20px; 
+    border-radius: 5px; 
+    font-weight: 600;
 }
 
 .single-text{
-    margin-top: 5%; font-weight: 700; font-size: 22px;
+    margin-top: 5%; 
+    font-size: 20px;
 }
 .flexible-container{
-    display: flex;
+    display: flex; 
+    align-items: center;
 }
 .half-width{
-    width: 50%; margin-left: 5%; margin-top: 2%;
+    width: 40%; 
+    margin-left: 5%;
 }
 
-.half-width img{ margin-left: 20%;
-    width: 75%; 
+.half-width img{
+    width: 100%; 
 }
 
 
-.content-graphic{
-     padding: 40px; border-radius: 10px; text-align: center; margin: 50px; background-color: rgb(255, 208, 107);
+.glance-content{
+     padding: 30px; 
+     border-radius: 30px;  
+     margin: 15px; 
+     background-color: rgb(255, 208, 107);
+     width: 22%; 
+     margin-left: 5%;
+}
+
+.glance-content img { 
+    width: 50%;
 }
 
 .content-uiux{
-    padding: 40px; border-radius: 10px; text-align: center; margin: 50px; background-color: rgb(255, 226, 94);
+    padding: 30px; 
+    border-radius: 30px; 
+    margin: 30px; 
+    background-color: rgb(255, 226, 94);
+    width: 22%;
     }
-
+    
+    .content-uiux img { 
+        width: 100%;
+    }
 .content-web{
-padding: 40px; border-radius: 10px; text-align: center; margin: 50px; background-color: rgb(255, 187, 0);
+padding: 30px; 
+border-radius: 30px; 
+margin: 30px; 
+background-color: rgb(255, 187, 0);
+width: 22%;
 }
+
+.content-web img { 
+    width: 100%;
+}
+
 
 .mission{ margin-top: 100px;
-    text-align: center; font-size: 40px; font-weight: 800;
+          text-align: center;
 }
 
-.building{
-     font-size: 20px; background-image: url(images/shapes/shape-1.png); background-size: 200px; background-repeat: no-repeat; background-position: left;
+.develop-image{
+    width: 25%; 
+    margin-left: 5%;
 }
 
+.develop-text{
+    width: 60%; 
+    margin-left: 5%;
+}
 
+.develop-image img{
+    width: 100%;
+}
 
+.hardwork{
+    padding: 10px 0; 
+    background-color: #0B0D17; 
+    text-align: center; 
+}
+
+.hardwork h1{
+    color: #fff;
+    font-family:'Pattaya', sans-serif; 
+}
+
+.hardwork p{
+    color: #fff;
+}
+
+.tex-justify{
+    text-align: justify; font-size: 20px;
+}
